--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,6 +1,7 @@
 .SearchResults {
   width: 50%;
-  height: 950px;
+  min-width: 50px;
+  max-height: 300px;
   overflow-y: scroll;
   padding: .88rem;
   background-color: rgba(1, 12, 63, 0.7);
